test/compile-fail/resolution/conflicts/many/top.rhdl
struct a {}
enum a {}
trait a {}
const a: b = false;
type a = b;
struct b {}
